--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server": "^3.3.0",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "graphql-tools": "^8.1.0"
   }
 }
