--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.2.0",
     "apollo-server": "^3.3.0",
     "apollo-server-core": "^3.3.0",
     "apollo-server-express": "^3.3.0",
     "express": "^4.17.1",
     "graphql": "^15.5.2",
-    "graphql-tools": "^8.1.0"
+    "graphql-tools": "^8.1.0",
+    "subscriptions-transport-ws": "^0.9.19"
   }
 }
