--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "apollo-server-express": "^3.3.0",
     "express": "^4.17.1",
     "graphql": "^15.5.2",
+    "graphql-subscriptions": "^1.2.1",
     "graphql-tools": "^8.1.0",
     "subscriptions-transport-ws": "^0.9.19"
   }
